update deep/README